[package]
name = "yuml-cli"
version = "0.1.0"
authors = ["mibes <mibes@avaya.com>"]
edition = "2021"
license = "MIT"
description = "Rust based yUML parser CLI"
readme = "README.md"
documentation = "https://docs.rs/yuml-rs"
repository = "https://github.com/mibes404/yuml-rs"
keywords = ["yuml"]
categories = ["parser"]

[dependencies]
clap="2"

# local
yuml-rs = { path = "../yuml-rs" }