[package]
name = "yuml-rs"
version = "0.1.0"
authors = ["mibes <mibes@avaya.com>"]
edition = "2021"
license = "MIT"
description = "Rust based yUML parser"
readme = "README.md"
documentation = "https://docs.rs/yuml-rs"
repository = "https://github.com/mibes404/yuml-rs"
keywords = ["yuml"]
categories = ["parser"]

[dependencies]
lazy_static = "1.4"
regex = "1.5"
derive_more = "0.99"
itertools = "0.10"
nom = "7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false